--- a/tenderly-testnet/dismiss-pot/tenderly.yaml
+++ b/tenderly-testnet/dismiss-pot/tenderly.yaml
@@ -4,11 +4,11 @@ actions:
     runtime: v2
     sources: actions
     specs:
-      aceTheBracketsMain:
-        description: "Advance Games for AceTheBrackets Base Mainnet"
-        function: advanceGamesMain:advanceGamesMain
+      aceTheBrackets:
+        description: "Advance Games for AceTheBrackets"
+        function: advanceGames:advanceGames
         trigger:
           type: periodic
           periodic:
-            interval: 10m
+            interval: 30m
 project_slug: "perfectpool"
